# my_homework_python

./: .pylintrc  README.md  requirements.txt
homework_03/: Dockerfile  README.md  pyproject.toml
homework_03/my_app/: app.py  items.py
homework_03/my_app/users/: crud.py  dependensins.py  shemas.py  views.py
homework_07/: README.md  pyproject.toml  requirements.txt
homework_07/sales_shop/sales_shop/: settings.py  urls.py
homework_07/sales_shop/shop/: admin.py  models.py  urls.py  views.py
homework_07/sales_shop/shop/templates/shop/: categories_with_products_tree.html  index.html
homework_07/sales_shop/templates/: base.html
homework_09/: README.md  pyproject.toml
homework_09/sales_shop/sales_shop/: __init__.py  settings.py  urls.py
homework_09/sales_shop/shop/: admin.py  forms.py  urls.py  views.py
homework_09/sales_shop/shop/fixtures/: categories-fixture.json  product-fixture.json
homework_09/sales_shop/shop/migrations/: 0002_category.py  0004_product_category.py  0006_alter_product_category.py  0008_product_status.py  0009_order.py  0010_orderpaymentdeteils.py  0012_category_archived.py
homework_09/sales_shop/shop/templates/shop/: category_confirm_delete.html  category_detail.html  category_update_form.html  index.html  products.html
homework_09/sales_shop/shop/tests/: test_categories.py  test_index_views.py  test_products.py  test_task_info_view.py
homework_09/sales_shop/site_auth/: forms.py  tasks.py  tests.py  urls.py  views.py
homework_09/sales_shop/templates/: base.html  index.html
homework_10/: .gitignore  .pylintrc  Dockerfile-local  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
homework_10/models/: __init__.py  posts.py
homework_10/static/js/: bootstrap.bundle.js
homework_10/templates/: base.html  confirm-delete.html
homework_10/testing/: conftest.py  test_app.py
homework_10/testing/views/: test_json_plc_hd.py
homework_10/views/: posts.py
homework_10/views/forms/: posts.py
(+60 files in other folders)
