[tool.poetry]
name = "homework-otus"
version = "0.1.0"
description = ""
authors = ["Amarok00 <imka0012@gmail.com>"]
readme = "README.md"
# packages = [{include = "homework_otus"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
ruff = "^0.0.262"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
